--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -2,8 +2,11 @@
 {% load codrspace_tags %}
 {% load short_codes %}
 {% load url from future %}
+
+{% block header %}{% endblock %}
+
 {% block content %}
-<span class="span6">
+<span class="span8">
   <p class="lead">
     UNDER CONSTRUCTION: This page is currently being tested and filled with content. Please bear with me. It will break often.
   </p>
