--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -34,7 +34,16 @@
         </div>
       </header>
       {% endblock %}
-      {% block content %}{% endblock %}
+      {% block main %}
+      <div class="row">
+        <div class="span8">
+          {% block content %}{% endblock %}
+        </div>
+        <div class="span4">
+          {% block side %}{% endblock %}
+        </div>
+      </div>
+      {% endblock %}
       {% block footer %}
       <footer>
       </footer>
