moving github secret to local settings

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -20,13 +20,9 @@
     {% block analytics %}{{ ANALYTICS_CODE|safe }}{% endblock %}
   </head>
   <body>
-    {% block nav %}
-    {% include "_nav.html" with page="home" %}
-    {% endblock %}
+    {% block nav %}{% include "_nav.html" with page="home" %}{% endblock %}
     <div class="container">
-      {% block messages %}
-      {% include "_messages.html" with messages=messages %}
-      {% endblock %}
+      {% block messages %}{% include "_messages.html" with messages=messages %}{% endblock %}
       {% block header %}
       <header>
         <div class="page-header">
@@ -34,6 +30,7 @@
         </div>
       </header>
       {% endblock %}
+
       {% block main %}
       <div class="row">
         <div class="span8">
@@ -44,6 +41,7 @@
         </div>
       </div>
       {% endblock %}
+
       {% block footer %}
       <footer>
       </footer>
