--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -37,7 +37,7 @@
           {% block content %}{% endblock %}
         </div>
         <div class="span4">
-          {% block side %}{% endblock %}
+          {% block side %}{% include "_side.html" %}{% endblock %}
         </div>
       </div>
       {% endblock %}
