tearing out the old wmd

--- a/txrx/static/css/txrx.css
+++ b/txrx/static/css/txrx.css
@@ -29,6 +29,12 @@ form label.required {
   width: 100%;
 }
 
+label .help-text {
+  display: inline-block;
+  font-size: 0.9em;
+  margin-left: 25px;
+}
+
 /* modal */
 
 .modal .itemName {
