--- a/txrx/templates/_side.html
+++ b/txrx/templates/_side.html
@@ -1,3 +1,25 @@
+<div class="well">
+  <p>
+    TX/RX Labs is a non-profit organization that provides a makerspace for the greater Houston area.
+    If you like what we do, please donate.
+  </p>
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="margin:0;">
+    <input type="hidden" name="cmd" value="_donations">
+    <input type="hidden" name="business" value="txrxlabs@gmail.com">
+    <input type="hidden" name="lc" value="US">
+    <input type="hidden" name="item_name" value="TX/RX Labs">
+    <input type="hidden" name="item_number" value="side-button">
+    <input type="hidden" name="no_note" value="0">
+    <input type="hidden" name="currency_code" value="USD">
+    <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+    <center>
+      <input type="image" src="{{ STATIC_URL }}paypal-donate-button.jpg" border="0" height="30"
+             name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </center>
+  </form>
+</div>
+
 <h2>Upcoming Events</h2>
 <div class="well">
   <ul class="unstyled">
