--- a/membership/templates/membership/join-us.html
+++ b/membership/templates/membership/join-us.html
@@ -18,7 +18,7 @@ function setHiddenFields(that) {
 //when pages loaded, update all selects
 $(document).ready(function() {$("select").change()});
 </script>
-{{ flatpage.content }}
+{{ flatpage.content|safe }}
 <div class="clear"></div>
 <h2>There are 4 membership levels to choose from:</h2>
 <br />
