github login now accepts email. username is on setting form

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load url from future %}
-{% load thumbnail content_tags %}
+{% load thumbnail %}
 
 {% block title %}Classes {{ term.name }} at {{ block.super }} {% endblock %}
 
