--- a/txrx/static/css/txrx.css
+++ b/txrx/static/css/txrx.css
@@ -30,7 +30,7 @@ div.post-content {
   width: 100%;
 }
 
-div.post-content.short .post-image {
+div.post-content .post-image {
   float: left;
   margin-right: 20px;
 }
