--- a/codrspace/templates/_partial-media-list.html
+++ b/codrspace/templates/_partial-media-list.html
@@ -1,7 +1,7 @@
 <div id="media-list">
 {% for media in media_set|slice:":15" %}
     <div class="media-item">
-        <a href="javascript:;" rel="tooltip" data-placement="left" data-shortcode="{{ media.shortcode }}" data-original-title="Click to insert media in post">{{ media.filename }}</a>
+        <a href="javascript:;" rel="tooltip" data-placement="left" data-shortcode="{{ media.shortcode }}" data-original-title="Click to insert media in post">{{ media }}</a>
     </div>
 {% endfor %}
 </div>
