depracating main static

--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -23,7 +23,7 @@
   <div class="modal-footer">
     <a href="javascript:;" 
        onclick="createCookie('checkout_initiated','yes!',10);simpleCart.checkout(); return false">
-      <img src="{{ STATIC_URL }}paypal.png">
+      <img src="{{ STATIC_URL }}img/paypal.png">
     </a>
     <a href="#" data-dismiss="modal" class="btn">Cancel</a>
   </div>
