--- a/txrx/templates/_side.html
+++ b/txrx/templates/_side.html
@@ -13,7 +13,7 @@
     <input type="hidden" name="currency_code" value="USD">
     <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
     <center>
-      <input type="image" src="{{ STATIC_URL }}paypal-donate-button.png" border="0" height="30"
+      <input type="image" src="{{ STATIC_URL }}img/paypal-donate-button.png" border="0" height="30"
              name="submit" alt="PayPal - The safer, easier way to pay online!">
     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
     </center>
