all done with new photo widget

--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -18,6 +18,8 @@
 @import "bootstrap/less/dropdowns.less";
 @import "bootstrap/less/navbar.less";
 @import "bootstrap/less/navs.less";
+@import "bootstrap/less/modals.less";
+@import "bootstrap/less/close.less";
 @import "bootstrap/less/type.less";
 @import "bootstrap/less/tables.less";
 @import "bootstrap/less/sprites.less";
