--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -6,7 +6,7 @@
     {% block extra_head %}{% endblock %}
     {% compress css %}
     {# all styling is kept in the less directory. This see the import file here. #}
-    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/bootstrap.less">
+    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
     {#<script type="text/javascript" src="{{ STATIC_URL }}less/less.js"> </script>#}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/pygments.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
