--- a/txrx/templates/edit.html
+++ b/txrx/templates/edit.html
@@ -1,59 +1,96 @@
 {% extends "auth_base.html" %}
+{% load url from future %}
 
 {% block title %}{% if post %}Edit{% else %}Add{% endif %} Post - {% firstof post.title "Untitled" %}{% endblock %}
 
-{% block head %}
-<script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
+{% block content %}
+<form action="" method="POST" enctype="multipart/form-data">
+  {% include "_form_messages.html" with form=form %}
+  {% csrf_token %}
+  <div class="form-vertical">
+    {% if post %}
+    <p><a href="{% url "post_detail" user.username post.slug %}" target="_new">View this post <i class="icon-arrow-right"></i></a></p>
+    {% endif %}
+    {% for field in form %}
+    <div id="{{ field.name }}" class="control-group">
+      <label for="id_{{ field.name }}">
+        <b>{{ field.label }}</b>
+        {% if field.help_text %}<span class="muted help-text">{{ field.help_text|safe }}</span>{% endif %}
+      </label>
+      {{ field }}
+    </div>
+    {% endfor %}
+  </div>
+  <input class="btn btn-success btn-large" type="submit" name="submit_post" value="Save changes" />
+  {% if posts %}
+  <div class="page-header">
+    <h2>Other posts</h2>
+  </div>
+  {% include "_partial-post-list.html" with current_post=post %}
+  {% endif %}
+  <div class="modal hide" id="image-modal">
+    <div class="modal-header">
+      <a class="close" data-dismiss="modal">×</a>
+      <h3>Select an Image to Insert</h3>
+    </div>
+    <div class="modal-body">
+      <iframe style="height: 320px;width: 100%; border: none; margin: 0; padding: 0;"></iframe>
+    </div>
+    <div class="modal-footer">
+      <a href="javascript:;" onclick="addImage();$(this).hide();return false;" class="btn">Add New Image</a>
+      <a href="#" data-dismiss="modal" class="btn">Close</a>
+    </div>
+  </div>
+  <div class="modal" id="preview-modal">
+    <div class="modal-header">
+      <a class="close" data-dismiss="modal">×</a>
+      <h3>Preview</h3>
+    </div>
+    <div class="modal-body"></div>
+    <div class="modal-footer">
+      <a href="#" data-dismiss="modal" class="btn">Close</a>
+    </div>
+  </div>
+</form>
 {% endblock %}
 
-{% block main %}
-<div class="row">
-  <form action="" method="POST" enctype="multipart/form-data">
-    <div class="span8">
-      {% include "_form_messages.html" with form=form %}
-      {% csrf_token %}
-      <div class="form-vertical">
-        {% if post %}
-        <p><a href="{% url post_detail user.username post.slug %}" target="_new">View this post <i class="icon-arrow-right"></i></a></p>
-        {% endif %}
-        {% for field in form %}
-        <div id="{{ field.name }}" class="control-group">
-          <label for="id_{{ field.name }}">
-            <b>{{ field.label }}</b>
-            {% if field.help_text %}<span class="muted help-text">{{ field.help_text|safe }}</span>{% endif %}
-          </label>
-          {{ field }}
-        </div>
-        {% endfor %}
-      </div>
-      <input class="btn btn-success btn-large" type="submit" name="submit_post" value="Save changes" />
-      {% if posts %}
-      <div class="page-header">
-        <h2>Other posts</h2>
-      </div>
-      {% include "_partial-post-list.html" with current_post=post %}
-      {% endif %}
-      <div class="modal" id="preview-modal">
-        <div class="modal-header">
-          <a class="close" data-dismiss="modal">×</a>
-          <h3>Preview</h3>
-        </div>
-        <div class="modal-body"></div>
-        <div class="modal-footer">
-          <a href="#" data-dismiss="modal" class="btn">Close</a>
-        </div>
-      </div>
-    </div>
-    <div class="span4">
-      {% include "_blog_side.html" %}
-    </div>
-  </form>
+{% block side %}
+<h2>Help</h2>
+<div class="well">
+  {% include "_shortcode_help.html" %}
 </div>
 {% endblock %}
 
 {% block extra_body %}
 <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-modal.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}wmd/wmd.js"></script>
+<script type="text/javascript">
+function insertImage(chunk,callback) {
+  window.wmd_chunk = chunk;
+  window.current_modal = "#image-modal";
+  window.iframe_callback = callback;
+  $("#image-modal iframe").attr("src","{% url "insert_photo" %}");
+  $("#image-modal").modal('show');
+}
+function addImage() {
+  $("#image-modal iframe").attr("src","{% url "add_photo" %}");
+}
+function insertShortCode(obj) {
+  var out = wmd_chunk.before.trimRight()+"\n\n";
+  out += obj.shortcode;
+  out += "\n\n"+wmd_chunk.after.trimLeft();
+  $("#wmd-input").val(out.trim());
+  $(current_modal).modal('hide');
+}
+function insertID(obj) {
+  $("#id_photo").val(obj.id);
+  $(current_modal).modal('hide');
+}
+$(document).ready(function(){
+  $("#lookup_id_photo").click(function(){insertImage('',insertID)})
+  $("#lookup_id_photo").attr("href","javascript:;")
+});
+</script>
 <script type="text/javascript" src="{{ STATIC_URL }}jquery.insertat.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}jquery.hotkeys.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}codrspace_admin.js"></script>
