--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -11,24 +11,24 @@
 @import "variables.less";
 @import "bootswatch.less";
 */
-@import "bootstrap/less/variables.less";
-@import "bootstrap/less/mixins.less";
-@import "bootstrap/less/layouts.less";
-@import "bootstrap/less/grid.less";
-@import "bootstrap/less/dropdowns.less";
-@import "bootstrap/less/navbar.less";
-@import "bootstrap/less/navs.less";
-@import "bootstrap/less/modals.less";
-@import "bootstrap/less/close.less";
-@import "bootstrap/less/type.less";
-@import "bootstrap/less/tables.less";
-@import "bootstrap/less/sprites.less";
-@import "bootstrap/less/forms.less";
-@import "bootstrap/less/labels-badges.less";
-@import "bootstrap/less/scaffolding.less";
-@import "bootstrap/less/buttons.less";
-@import "bootstrap/less/wells.less";
-@import "bootstrap/less/utilities.less";
+@import "bs/variables.less";
+@import "bs/mixins.less";
+@import "bs/layouts.less";
+@import "bs/grid.less";
+@import "bs/dropdowns.less";
+@import "bs/navbar.less";
+@import "bs/navs.less";
+@import "bs/modals.less";
+@import "bs/close.less";
+@import "bs/type.less";
+@import "bs/tables.less";
+@import "bs/sprites.less";
+@import "bs/forms.less";
+@import "bs/labels-badges.less";
+@import "bs/scaffolding.less";
+@import "bs/buttons.less";
+@import "bs/wells.less";
+@import "bs/utilities.less";
 
 /*for some reason this is not in the theme! */
 body { padding-top: 80px; }
