adding featured posts as a slideshow

--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -6,29 +6,28 @@
 
 
 
-/*--- bootstrap files ---*/
-/*
-@import "variables.less";
-@import "bootswatch.less";
-*/
+/*--- bootstrap files - these top two have to come first, everything else is sorted---*/
 @import "bs/variables.less";
 @import "bs/mixins.less";
-@import "bs/layouts.less";
-@import "bs/grid.less";
-@import "bs/dropdowns.less";
-@import "bs/navbar.less";
-@import "bs/navs.less";
-@import "bs/modals.less";
-@import "bs/close.less";
-@import "bs/type.less";
-@import "bs/tables.less";
-@import "bs/sprites.less";
-@import "bs/forms.less";
-@import "bs/labels-badges.less";
-@import "bs/scaffolding.less";
+
+@import "bs/alerts.less";
 @import "bs/buttons.less";
-@import "bs/wells.less";
+@import "bs/carousel.less";
+@import "bs/close.less";
+@import "bs/dropdowns.less";
+@import "bs/forms.less";
+@import "bs/grid.less";
+@import "bs/labels-badges.less";
+@import "bs/layouts.less";
+@import "bs/modals.less";
+@import "bs/navs.less";
+@import "bs/navbar.less";
+@import "bs/scaffolding.less";
+@import "bs/sprites.less";
+@import "bs/tables.less";
+@import "bs/type.less";
 @import "bs/utilities.less";
+@import "bs/wells.less";
 
 /*for some reason this is not in the theme! */
 body { padding-top: 80px; }
